Finalizando rotas e controllers da aplicação
